--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ click==8.1.7
 colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
+decorator==5.1.1
+duckdb==0.9.2
 filelock==3.12.4
 fonttools==4.47.0
 gitdb==4.0.11
@@ -31,14 +33,17 @@ mpmath==1.3.0
 multimethod==1.10
 networkx==3.1
 numpy==1.26.0
+oauthlib==3.2.2
 opencv-python==4.8.0.76
 packaging==23.2
-pandas==2.1.4
+pandas==1.5.3
 pandas-profiling==3.2.0
 phik==0.12.3
 Pillow==10.0.1
 protobuf==4.25.1
 pyarrow==14.0.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pydantic==2.5.2
 pydantic_core==2.14.5
 pydeck==0.8.1b0
@@ -50,12 +55,16 @@ PyWavelets==1.5.0
 PyYAML==6.0.1
 referencing==0.32.0
 requests==2.31.0
+requests-oauthlib==1.3.1
 rich==13.7.0
 rpds-py==0.15.2
+rsa==4.9
 scipy==1.11.4
 seaborn==0.13.0
 six==1.16.0
 smmap==5.0.1
+sql_metadata==2.10.0
+sqlparse==0.4.4
 streamlit==1.29.0
 streamlit-pandas-profiling==0.1.3
 sympy==1.12
